--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 libc = "0.2.177"
-mio = { version = "1.1.0", features = ["net", "os-poll"] }
+mio = { version = "1.1.0", features = ["net", "os-poll", "os-ext"] }
 tokio = { version = "1.48.0", features = ["full"] }
 
 [[bin]]
