--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 libc = "0.2.177"
 mio = { version = "1.1.0", features = ["net", "os-poll", "os-ext"] }
+ring = "0.17.14"
 tokio = { version = "1.48.0", features = ["full"] }
 
 [[bin]]
