--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+base64 = "0.22.1"
 libc = "0.2.177"
 mio = { version = "1.1.0", features = ["net", "os-poll", "os-ext"] }
 ring = "0.17.14"
